plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.jde'
version = '0.0.1-SNAPSHOT'
description = 'main-server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Web
    // Spring MVC(Controller, @RestController), 내장 톰캣, JSON, 기본 로깅(Logback)
    // REST API 서버를 만든다면 무조건 들어가는 필수 스타터
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring OAuth2 Client 소셜 로그인 용
    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Actuator (서비스 상태를 계속 파악할 수 있는 경로 열어주는거, 헬스 체크, 지금 당장은 안필요함)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.11'

    // Prometheus
    // implementation 'io.micrometer:micrometer-registry-prometheus'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // Hibernate Spatial (PostGIS 연동, geometry 타입)
    implementation 'org.hibernate.orm:hibernate-spatial'

    // JSONB 매핑 (JsonBinaryType)
    implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test 를 위한 필수 스타터
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // JWT 쓸려면 아래 필요함 대신 버전 관리 할 것
    // JJWT의 'API' 모듈(컴파일 타임에 필요한 인터페이스/타입)
    // JwtBuilder, JwtParser, Claims 같은 타입을 제공
    // 코드 작성/컴파일 시점에 필요하기 때문에 implementation 범위로 추가
     implementation("io.jsonwebtoken:jjwt-api:0.12.6")

    // JJWT의 '구현체' 모듈 (실제 동작 코드)
    // 위 API의 실제 동작을 수행하는 클래스들이 들어있습니다.
    // 실행 시점에만 있으면 되므로 runtimeOnly로 추가하여 컴파일 클래스패스를 깔끔하게 유지합니다.
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")

    // JJWT의 Jackson 바인더
    // JWT의 본문(Claims)을 JSON으로 직렬화/역직렬화할 때 Jackson을 사용하도록 해주는 모듈입니다.
    // 이것이 없으면 “JSON 직렬화기를 찾을 수 없음”과 같은 런타임 오류가 납니다.
    // 마찬가지로 실행 시점에만 필요하므로 runtimeOnly로 둡니다.
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")

    // Prometheus
    // implementation 'io.micrometer:micrometer-registry-prometheus'
    // AWS S3
    // implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    // 외부 API 사용시
    // WebClient 용
    implementation("org.springframework.boot:spring-boot-starter-webflux")
    // @Valid 용
    // implementation 'org.springframework.boot:spring-boot-starter-validation'

    //지오메트리 매핑용
    implementation 'org.locationtech.jts:jts-core:1.19.0'
    implementation 'org.hibernate.orm:hibernate-spatial:6.5.2.Final'

    // 왜 있는지 모름
    // developmentOnly 'org.springframework.boot:spring-boot-devtools'
    // annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    // implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

}

//dependencyManagement {
//    imports {
//        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
//    }
//}

tasks.named('test') {
    useJUnitPlatform()
}

springBoot {
    mainClass = 'com.jde.mainserver.MainServerApplication'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
